--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
     <title>Drinks</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 </head>
 <body>
@@ -19,7 +20,7 @@
               </div> -->
 
               <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Choose your Poison</a>
+  <a class="navbar-brand" href="#">DrinkUp!</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -30,17 +31,17 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact Us</a>
+        <a class="nav-link" href="contact.html">Contact Us</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Alcoholic Drinks</a>
-          <a class="dropdown-item" href="#">Non Alcoholic Drinks</a>
+          <a class="dropdown-item" href="Alcoholic.html">Alcoholic Drinks</a>
+          <a class="dropdown-item" href="Non-Alcoholic.html">Non Alcoholic Drinks</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Drinker's Favorates</a>
+          <a class="dropdown-item" href="favorites.html">Drinker's Favorates</a>
         </div>
       </li>
       <li class="nav-item">
@@ -74,6 +75,10 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+
+      <footer class="w3-center w3-black w3-padding-16 footer fixed-bottom">
+          <p> <a href="https://twitter.com/drunkasspeter/status/476917576417546241" title="W3.CSS" target="_blank" class="w3-hover-text-green">Are You Drunk Yet?</a></p>
+        </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
