--- a/Non-Alcoholic.html
+++ b/Non-Alcoholic.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Non Alcoholic Drinks Random Selection</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body>
   <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: dimgrey;">
       <a class="navbar-brand" href="#">DrinkUp!</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,9 +51,8 @@
       </div>
     </nav>
 
-    <div class="container-fluid bg-light" id="body">
-
-      <div class="row justify-content-md-center">
+    <div class="container mt-5">
+      <div class="row  d-flex justify-content-md-center" id="randomBeverageCard">
         <div class="card text-center">
           <div class="card-header">
             Click below for your random Beverage!
@@ -62,33 +61,37 @@
             <h5 class="card-title">Lets get Started!</h5>
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0Tv-vC-VP3pkjXLUtpDHODG7OJsyg2X1_B7gTIAx5Yc1dKZp5kA&s"
-              class="mr-3" alt="...">
+              class="mr-3" alt="Non-Alcoholic Drinks">
 
             <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">Get your Drink!</a>
-          </div>
-          <div class="card-footer text-muted">
-
+            <a href="#" id="getRandomBeverage" class="btn btn-primary">Get your Drink!</a>
           </div>
         </div>
+          <div class="containerDetail" style="display:none">
+              <img src="#" alt="Drink Image" class="image2">
+              <div class="overlay2">
+                <div class="text2">Hello World</div>
+              </div>
+              <h3 class="drinkName">Drink Name</h3>
+          </div>
       </div>
-
     </div>
+  </div>
 
-    <footer class="w3-center w3-black w3-padding-16 footer fixed-bottom">
-      <p> <a href="https://twitter.com/drunkasspeter/status/476917576417546241" title="W3.CSS" target="_blank"
-          class="w3-hover-text-green">Are You Drunk Yet?</a></p>
-    </footer>
+  <footer class="w3-center w3-black w3-padding-16 footer fixed-bottom">
+    <p> <a href="https://twitter.com/drunkasspeter/status/476917576417546241" title="W3.CSS" target="_blank"
+        class="w3-hover-text-green">Are You Thirsty Yet?</a></p>
+  </footer>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./assets/js/script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script type="text/javascript" src="./assets/js/nonAlcoholic.js"></script>
 
 </body>
 
