searching by first letter added

--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,10 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="Alcoholic.html">Alcoholic Drinks</a>
               <a class="dropdown-item" href="Non-Alcoholic.html">Non Alcoholic Drinks</a>
+              <a class="dropdown-item" href="popular.html">Popular Cocktails</a>
+              <a class="dropdown-item" href="capitalLetter.html">List Cocktails by First Letter</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="favorites.html">Drinker's Favorates</a>
+              <a class="dropdown-item" href="favorites.html">Drinker's Favorites</a>
             </div>
           </li>
           <li class="nav-item">
@@ -50,44 +52,7 @@
         </form>
       </div>
     </nav>
-
-    <div class="container-fluid bg-light">
-      <div class="row justify-content-md-center">
-        <h1>Contact us!</h1>
-
-      </div>
-
-      <div class="row justify-content-md-center bg-light">
-        <h3>Give us an email if you have any inquiries about our website!</h3>
-      </div>
-
-    </div>
-
-
-    <div class="container-fluid bg-light" id="body">
-
-      <div class="row justify-content-md-center">
-        <form>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">First And Last Name</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="First Last">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Whats Up?</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
-        </form>
-      </div>
-    </div>
-
-    <footer class="w3-center w3-black w3-padding-16 footer fixed-bottom">
-      <p> <a href="https://twitter.com/drunkasspeter/status/476917576417546241" title="W3.CSS" target="_blank"
-          class="w3-hover-text-green">Are You Drunk Yet?</a></p>
-    </footer>
+    
     <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
     <div class="w3-container">
  
@@ -114,6 +79,12 @@
         </div>
       </div>
       <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+
+      <footer class="w3-center w3-black w3-padding-16 footer fixed-bottom">
+        <p> <a href="https://twitter.com/drunkasspeter/status/476917576417546241" title="W3.CSS" target="_blank"
+            class="w3-hover-text-green">Are You Drunk Yet?</a></p>
+      </footer>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"></script>
