--- a/Non-Alcoholic.html
+++ b/Non-Alcoholic.html
@@ -37,8 +37,10 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="Alcoholic.html">Alcoholic Drinks</a>
               <a class="dropdown-item" href="Non-Alcoholic.html">Non Alcoholic Drinks</a>
+              <a class="dropdown-item" href="popular.html">Popular Cocktails</a>
+              <a class="dropdown-item" href="capitalLetter.html">List Cocktails by First Letter</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="favorites.html">Drinker's Favorates</a>
+              <a class="dropdown-item" href="favorites.html">Drinker's Favorites</a>
             </div>
           </li>
           <li class="nav-item">
