--- a/searchResult.html
+++ b/searchResult.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: dimgrey;">
     <a class="navbar-brand" href="#">DrinkUp!</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,8 +37,10 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="Alcoholic.html">Alcoholic Drinks</a>
             <a class="dropdown-item" href="Non-Alcoholic.html">Non Alcoholic Drinks</a>
+            <a class="dropdown-item" href="popular.html">Popular Cocktails</a>
+            <a class="dropdown-item" href="capitalLetter.html">List Cocktails by First Letter</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="favorites.html">Drinker's Favorates</a>
+            <a class="dropdown-item" href="favorites.html">Drinker's Favorites</a>
           </div>
         </li>
         <li class="nav-item">
