drinks details added behind images

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact Us</a>
@@ -37,8 +37,10 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="Alcoholic.html">Alcoholic Drinks</a>
             <a class="dropdown-item" href="Non-Alcoholic.html">Non Alcoholic Drinks</a>
+            <a class="dropdown-item" href="popular.html">Popular Cocktails</a>
+            <a class="dropdown-item" href="firstLetter.html">List by First Letter</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="favorites.html">Drinker's Favorates</a>
+            <a class="dropdown-item" href="favorites.html">Drinker's Favorites</a>
           </div>
         </li>
         <li class="nav-item">
@@ -46,7 +48,7 @@
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input id="searchInput" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button id="searchBtn" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <button id="searchBtn" class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
   </nav>
