--- a/Alcoholic.html
+++ b/Alcoholic.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Random Alcoholic Drinks</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact Us</a>
@@ -38,7 +38,7 @@
               <a class="dropdown-item" href="Alcoholic.html">Alcoholic Drinks</a>
               <a class="dropdown-item" href="Non-Alcoholic.html">Non Alcoholic Drinks</a>
               <a class="dropdown-item" href="popular.html">Popular Cocktails</a>
-              <a class="dropdown-item" href="capitalLetter.html">List Cocktails by First Letter</a>
+              <a class="dropdown-item" href="firstLetter.html">List by First Letter</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="favorites.html">Drinker's Favorites</a>
             </div>
@@ -48,12 +48,12 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input id="searchInput" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button id="searchBtn" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button id="searchBtn" class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
     </nav>
 
-    <div class="container mt5">
+    <div class="container mt-5">
       <div class="row d-flex justify-content-md-center" id="randomBeverageCard">
         <div class="card text-center">
           <div class="card-header">
@@ -72,7 +72,8 @@
         <div class="containerDetail" style="display:none">
             <img src="#" alt="Drink Image" class="image2">
             <div class="overlay2">
-              <div class="text2">Hello World</div>
+              <div class="text2"></div>
+              <input class="addFavorite" type="image" src="./assets/img/heartPlus.png" alt="Add Favorite" width="60" height="60">
             </div>
             <h3 class="drinkName">Drink Name</h3>
         </div>
