--- a/searchResult.html
+++ b/searchResult.html
@@ -38,7 +38,7 @@
             <a class="dropdown-item" href="Alcoholic.html">Alcoholic Drinks</a>
             <a class="dropdown-item" href="Non-Alcoholic.html">Non Alcoholic Drinks</a>
             <a class="dropdown-item" href="popular.html">Popular Cocktails</a>
-            <a class="dropdown-item" href="capitalLetter.html">List Cocktails by First Letter</a>
+            <a class="dropdown-item" href="firstLetter.html">List by First Letter</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="favorites.html">Drinker's Favorites</a>
           </div>
@@ -48,7 +48,7 @@
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input id="searchInput" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button id="searchBtn" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <button id="searchBtn" class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
   </nav>
