--- a/Alcoholic.html
+++ b/Alcoholic.html
@@ -53,59 +53,60 @@
       </div>
     </nav>
 
-    <div class="container mt-5">
-      <div class="row d-flex justify-content-md-center" id="randomBeverageCard">
-        <div class="card text-center">
-          <div class="card-header">
-            Click below for your random Alcoholic Beverage!
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Lets get Started!</h5>
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBqq904CiLWTYTF3ZLSHoztJNr-GK8U9Z6I4h4n8Po1CzCLH7Ggw&s"
-              class="mr-3" alt="Alcoholic Drinks">
+    <div class="d-flex justify-content-md-center align-self-center mt-5">
+      <div class="container mt-5">
+        <div class="row d-flex justify-content-md-center" id="randomBeverageCard">
+          <div class="card text-center">
+            <div class="card-header">
+              Click below for your random Alcoholic Beverage!
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Lets get Started!</h5>
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBqq904CiLWTYTF3ZLSHoztJNr-GK8U9Z6I4h4n8Po1CzCLH7Ggw&s"
+                class="mr-3" alt="Alcoholic Drinks">
 
-            <p class="card-text"></p>
-            <a href="#" id="getRandomBeverage" class="btn btn-primary">Get your Drink!</a>
+              <p class="card-text"></p>
+              <a href="#" id="getRandomBeverage" class="btn btn-primary">Get your Drink!</a>
+            </div>
           </div>
-        </div>
-        <div class="containerDetail" style="display:none">
+          <div class="containerDetail" style="display:none">
             <img src="#" alt="Drink Image" class="image2">
             <div class="overlay2">
               <div class="text2"></div>
-              <input class="addFavorite" type="image" src="./assets/img/heartPlus.png" alt="Add Favorite" width="60" height="60">
+              <input class="addFavorite" type="image" src="./assets/img/heartPlus.png" alt="Add Favorite" width="60"
+                height="60">
             </div>
             <h3 class="drinkName">Drink Name</h3>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
-    <!-- <br><br>
+  <!-- <br><br>
     <div id="searchDiv"> -->
-      <!-- <div class="container-drink">
+  <!-- <div class="container-drink">
         <img src="./assets/img/t0iugg1509556712.jpg" alt="drink" class="image ">
         <div class="overlay">
           <div class="text">Hello World</div>
         </div>
       </div> -->
-    <!-- </div> -->
+  <!-- </div> -->
 
-    <footer class="w3-center w3-black w3-padding-16 footer fixed-bottom">
-      <p> <a href="https://twitter.com/drunkasspeter/status/476917576417546241" title="W3.CSS" target="_blank"
-          class="w3-hover-text-green">Are You Drunk Yet?</a></p>
-    </footer>
+  <footer class="w3-center w3-black w3-padding-16 footer fixed-bottom">
+    <p> <a href="https://twitter.com/drunkasspeter/status/476917576417546241" title="W3.CSS" target="_blank"
+        class="w3-hover-text-green">Are You Drunk Yet?</a></p>
+  </footer>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"></script>
-      <script type="text/javascript" src="./assets/js/alcoholic.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script type="text/javascript" src="./assets/js/alcoholic.js"></script>
 
 </body>
 
