--- a/Non-Alcoholic.html
+++ b/Non-Alcoholic.html
@@ -53,30 +53,32 @@
       </div>
     </nav>
 
-    <div class="container mt-5">
-      <div class="row  d-flex justify-content-md-center" id="randomBeverageCard">
-        <div class="card text-center">
-          <div class="card-header">
-            Click below for your random Beverage!
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Lets get Started!</h5>
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0Tv-vC-VP3pkjXLUtpDHODG7OJsyg2X1_B7gTIAx5Yc1dKZp5kA&s"
-              class="mr-3" alt="Non-Alcoholic Drinks">
+    <div class="d-flex justify-content-md-center align-self-center mt-5">
+      <div class="container mt-5">
+        <div class="row  d-flex justify-content-md-center" id="randomBeverageCard">
+          <div class="card text-center">
+            <div class="card-header">
+              Click below for your random Beverage!
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Lets get Started!</h5>
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0Tv-vC-VP3pkjXLUtpDHODG7OJsyg2X1_B7gTIAx5Yc1dKZp5kA&s"
+                class="mr-3" alt="Non-Alcoholic Drinks">
 
-            <p class="card-text"></p>
-            <a href="#" id="getRandomBeverage" class="btn btn-primary">Get your Drink!</a>
+              <p class="card-text"></p>
+              <a href="#" id="getRandomBeverage" class="btn btn-primary">Get your Drink!</a>
+            </div>
+          </div>
+          <div class="containerDetail" style="display:none">
+            <img src="#" alt="Drink Image" class="image2">
+            <div class="overlay2">
+              <p class="text2"></p>
+              <input class="addFavorite" type="image" src="#" alt="Add Favorite" width="60" height="60">
+            </div>
+            <h3 class="drinkName">Drink Name</h3>
           </div>
         </div>
-          <div class="containerDetail" style="display:none">
-              <img src="#" alt="Drink Image" class="image2">
-              <div class="overlay2">
-                <p class="text2"></p>
-                <input class="addFavorite" type="image" src="./assets/img/heartPlus.png" alt="Add Favorite" width="60" height="60">
-              </div>
-              <h3 class="drinkName">Drink Name</h3>
-          </div>
       </div>
     </div>
   </div>
