--- a/firstLetter.html
+++ b/firstLetter.html
@@ -55,9 +55,9 @@
      </nav>
      <br><br>
      <br><br>
-     <br><br>
-
-     <div id="buttons"></div>
+     <div class="buttonsContainer d-flex justify-content-center">
+          <div id="buttons"></div>
+     </div>
 
      <br><br>
      <div id="searchDiv"></div>
