--- a/favorites.html
+++ b/favorites.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Your Favorites</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -14,7 +14,7 @@
 
 <body>
   <div class="container-fluid">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: dimgrey;">
       <a class="navbar-brand" href="#">DrinkUp!</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,25 +52,8 @@
         </form>
       </div>
     </nav>
-
-    <div class="container-fluid bg-light" id="body">
-
-      <div class="row justify-content-md-center">
-        <div class="card text-center">
-          <div class="card-header">
-            Your Favorites
-          </div>
-          <div class="card-body">
-
-
-          </div>
-          <div class="card-footer text-muted">
-
-          </div>
-        </div>
-      </div>
-
-    </div>
+    <br><br>
+    <div id="searchDiv"></div>
 
     <footer class="w3-center w3-black w3-padding-16 footer fixed-bottom">
       <p> <a href="https://twitter.com/drunkasspeter/status/476917576417546241" title="W3.CSS" target="_blank"
@@ -85,7 +68,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./assets/js/script.js"></script>
+    <script type="text/javascript" src="./assets/js/favorites.js"></script>
 
 </body>
 
