--- a/Alcoholic.html
+++ b/Alcoholic.html
@@ -38,7 +38,7 @@
               <a class="dropdown-item" href="Alcoholic.html">Alcoholic Drinks</a>
               <a class="dropdown-item" href="Non-Alcoholic.html">Non Alcoholic Drinks</a>
               <a class="dropdown-item" href="popular.html">Popular Cocktails</a>
-              <a class="dropdown-item" href="firstLetter.html">List by First Letter</a>
+              <a class="dropdown-item" href="firstLetter.html">List Cocktails by First Letter</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="favorites.html">Drinker's Favorites</a>
             </div>
@@ -74,8 +74,7 @@
             <img src="#" alt="Drink Image" class="image2">
             <div class="overlay2">
               <div class="text2"></div>
-              <input class="addFavorite" type="image" src="./assets/img/heartPlus.png" alt="Add Favorite" width="60"
-                height="60">
+              <input class="addFavorite" type="image" src="#" alt="Add Favorite" width="60" height="60">
             </div>
             <h3 class="drinkName">Drink Name</h3>
           </div>
