--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a class="dropdown-item" href="Alcoholic.html">Alcoholic Drinks</a>
             <a class="dropdown-item" href="Non-Alcoholic.html">Non Alcoholic Drinks</a>
             <a class="dropdown-item" href="popular.html">Popular Cocktails</a>
-            <a class="dropdown-item" href="firstLetter.html">List by First Letter</a>
+            <a class="dropdown-item" href="firstLetter.html">List Cocktails by First Letter</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="favorites.html">Drinker's Favorites</a>
           </div>
