DrinkUp! icon added

--- a/searchResult.html
+++ b/searchResult.html
@@ -15,6 +15,7 @@
 
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: dimgrey;">
+    <img class="cocktailImg" src="./assets/img/cocktail32.png">
     <a class="navbar-brand" href="#">DrinkUp!</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,16 +53,16 @@
       </form>
     </div>
   </nav>
-    <br><br>
-    <div id="searchDiv">
-      <!-- <div class="container-drink">
+  <br><br>
+  <div id="searchDiv">
+    <!-- <div class="container-drink">
         <img src="./assets/img/t0iugg1509556712.jpg" alt="drink" class="image ">
         <div class="overlay">
           <div class="text">Hello World</div>
         </div>
       </div> -->
-    </div>
-    
+  </div>
+
 
   <footer class="w3-center w3-black w3-padding-16 footer fixed-bottom">
     <p> <a href="https://twitter.com/drunkasspeter/status/476917576417546241" title="W3.CSS" target="_blank"
