--- a/Alcoholic.html
+++ b/Alcoholic.html
@@ -15,6 +15,7 @@
 <body>
   <div class="container-fluid">
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: dimgrey;">
+      <img class="cocktailImg" src="./assets/img/cocktail32.png">
       <a class="navbar-brand" href="#">DrinkUp!</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
