--- a/firstLetter.html
+++ b/firstLetter.html
@@ -15,6 +15,7 @@
 
 <body>
      <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: dimgrey;">
+          <img class="cocktailImg" src="./assets/img/cocktail32.png">
           <a class="navbar-brand" href="#">DrinkUp!</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +42,7 @@
                               <a class="dropdown-item" href="firstLetter.html">List Cocktails by First Letter</a>
                               <div class="dropdown-divider"></div>
                               <a class="dropdown-item" href="favorites.html">Drinker's Favorites</a>
-                            </div>
+                         </div>
                     </li>
                     <li class="nav-item">
                     </li>
