--- a/firstLetter.html
+++ b/firstLetter.html
@@ -33,7 +33,7 @@
                     <li class="nav-item dropdown">
                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Dropdown
+                              Drink Choices
                          </a>
                          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                               <a class="dropdown-item" href="Alcoholic.html">Alcoholic Drinks</a>
